[MANIKANTA]Modified files:user and note using authorization
