# src/controllers/user.controller.js
@@ -33,7 +33,7 @@ export const loginUser = async (req, res, next) => {
     res.status(HttpStatus.OK).json({
       code: HttpStatus.OK,
       data: user,
-      message: 'Authorization iis Required for logging In'
+      message: 'Authorization is Required for logging In'
     });
   } catch (error) {
     next(error);
@@ -84,18 +84,18 @@ export const newUser = async (req, res, next) => {
 //  * @param {object} res - response object
 //  * @param {Function} next
 // //  */
-// export const updateUser = async (req, res, next) => {
-//   try {
-//     const data = await UserService.updateUser(req.params._id, req.body);
-//     res.status(HttpStatus.ACCEPTED).json({
-//       code: HttpStatus.ACCEPTED,
-//       data: data,
-//       message: 'User updated successfully'
-//     });
-//   } catch (error) {
-//     next(error);
-//   }
-// };
+export const updateUser = async (req, res, next) => {
+  try {
+    const data = await UserService.updateUser(req.params._id, req.body);
+    res.status(HttpStatus.ACCEPTED).json({
+      code: HttpStatus.ACCEPTED,
+      data: data,
+      message: 'User updated successfully'
+    });
+  } catch (error) {
+    next(error);
+  }
+};
 
 // /**
 //  * Controller to delete a user
@@ -103,15 +103,15 @@ export const newUser = async (req, res, next) => {
 //  * @param {object} res - response object
 //  * @param {Function} next
 //  */
-// export const deleteUser = async (req, res, next) => {
-//   try {
-//     await UserService.deleteUser(req.params._id);
-//     res.status(HttpStatus.OK).json({
-//       code: HttpStatus.OK,
-//       data: [],
-//       message: 'User deleted successfully'
-//     });
-//   } catch (error) {
-//     next(error);
-//   }
-// };
+export const deleteUser = async (req, res, next) => {
+  try {
+    await UserService.deleteUser(req.params._id);
+    res.status(HttpStatus.OK).json({
+      code: HttpStatus.OK,
+      data: [],
+      message: 'User deleted successfully'
+    });
+  } catch (error) {
+    next(error);
+  }
+};
