# src/swagger/swagger.json
@@ -1,123 +1,260 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "version": "V1",
-      "title": "F App",
-      "description": "CLI App API"
-    },
-    "host": "localhost:3000",
-    "basePath": "/api/v1/",
-    "tags": [
-      {
-        "name": "CLI",
-        "description": "Creating user......."
-      }
-    ],
-    "schemes": [
-      "http"
-    ],
-    "consumes": [
-      "application/json"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "paths": {
-      "/user/registration": {
-        "post": {
-          "tags": ["CLI"],
-          "description": "create name...",
-          "parameters": [
-            {
-              "name": "Create name",
-              "in": "body",
-              "description": "Create",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "New user is created"
-            },
-            "500": {
-              "description": "Internal server error"
+  "swagger": "2.0",
+  "info": {
+    "version": "V1",
+    "title": "F App",
+    "description": "CLI App API"
+  },
+  "host": "localhost:3000",
+  "basePath": "/api/v1/",
+  "tags": [
+    {
+      "name": "CLI",
+      "description": "Creating user"
+    }
+  ],
+  "schemes": [
+    "http"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "paths": {
+    "/user/registration": {
+      "post": {
+        "tags": ["CLI"],
+        "description": "create user",
+        "parameters": [
+          {
+            "name": "Create name",
+            "in": "body",
+            "description": "Create",
+            "schema": {
+              "$ref": "#/definitions/User"
             }
           }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "New user is created"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/user/login": {
+      "post": {
+        "tags": ["CLI"],
+        "description": "login name...",
+        "parameters": [
+          {
+            "name": "login user",
+            "in": "body",
+            "description": "login",
+            "schema": {
+              "$ref": "#/definitions/loging"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "New user is created"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+  "/notes/create": {
+    "post": {
+      "tags": ["Notes using authorization"],
+      "description": "create a note...",
+      "parameters": [
+        {
+          "name": "create note",
+          "in": "body",
+          "description": "register",
+          "- in": "body",
+          "schema": {
+            "$ref": "#/definitions/Note"
+          }
+        }
+      ],
+      "produces": [
+        "application/json"
+      ],
+      "consumes": [
+        "application/json"
+      ],
+      "responses": {
+        "201": {
+          "description": "Note created successfully"
         }
       },
-      "/user/login": {
-        "post": {
-          "tags": ["CLI"],
-          "description": "login name...",
-          "parameters": [
-            {
-              "name": "login user",
-              "in": "body",
-              "description": "login",
-              "schema": {
-                "$ref": "#/definitions/loging"
-              }
-            }
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "New user is created"
-            },
-            "500": {
-              "description": "Internal server error"
-            }
-          }
+      "security": [
+        {
+          "JWT": []
         }
-      }
-    },
-    "definitions": {
-      "User": {
-        "type": "object",
-        "properties": {
-          "fname": {
-            "type": "string"
-          },
-          "lname": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
+      ]
+    }
+  },
+  "/notes/read/{id}": {
+    "get": {
+      "tags": ["Notes using authorization"],
+      "description": "login name...",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "description": "id",
+          "required" : true,
+          "type" : "string"
+        }
+      ],
+      "produces": [
+        "application/json"
+      ],
+      "responses": {
+        "201": {
+          "description": "New note is created"
+        },
+        "500": {
+          "description": "Internal server error"
         }
       },
-      "loging": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
+      "security": [
+        {
+          "JWT": []
+        }
+      ]
+    }
+  },
+
+  "/notes/update/{id}": {
+    "patch": {
+      "tags": ["Notes using authorization"],
+      "description": "updating the note...",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "description": "id"
+        },
+        {
+          "name": "update note",
+          "in": "body",
+          "description": "register",
+          "schema": {
+            "$ref": "#/definitions/Note"
           }
         }
-      }
-    },
-    "securityDefinitions": {
-      "JWT": {
-        "type": "apiKey",
-        "name": "Authorization",
-        "in": "header"
-      }
-    },
-    "security": [
-      {
-        "JWT": []
-      }
-    ]
+      ],
+      "produces": [
+        "application/json"
+      ],
+      "consumes": [
+        "application/json"
+      ],
+      "responses": {
+        "201": {
+          "description": "Note updated successfully"
+        }
+      },
+      "security": [
+        {
+          "JWT": []
+        }
+      ]
+    }
+  },
+  "/notes/delete/{id}": {
+    "delete": {
+      "tags": ["Notes using authorization"],
+      "description": "delete note...",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "description": "id"
+        }
+      ],
+      "produces": [
+        "application/json"
+      ],
+      "consumes": [
+        "application/json"
+      ],
+      "responses": {
+        "201": {
+          "description": "Note deleted successfully"
+        }
+      },
+      "security": [
+        {
+          "JWT": []
+        }
+      ]
+    }
   }
+},
+  "definitions": {
+    "Note":{
+      "type":"object",
+      "properties":{
+        "title":{
+          "type":"string"
+        },
+        "description":{
+          "type":"string"
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "loging": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    }
+  },
+  "securityDefinitions": {
+    "JWT": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  }
+}
