# src/validators/user.validator.js
@@ -2,9 +2,9 @@ import Joi from '@hapi/joi';
 
 export const newUserValidator = (req, res, next) => {
   const schema = Joi.object({
-    firstName: Joi.string().min(7).required(),
-    lastName: Joi.string().min(7).required(),
-    email:Joi.string().min(10).required(),
+    firstName: Joi.string().min(4).required(),
+    lastName: Joi.string().min(4).required(),
+    email:Joi.string().min(8).required(),
     password:Joi.string().min(8).required()
   });
   const { error, value } = schema.validate(req.body);
